Fix grid alignment

--- a/src/components/masonry-grid.css
+++ b/src/components/masonry-grid.css
@@ -2,7 +2,7 @@
 .my-masonry-grid {
   display: flex;
   width: 100%;
-  margin-left: -16px;
+  margin-left: -8px;
   max-width: none;
 }
 
